2022-04-04  Mohammad Matini  <mohammad.matini@outlook.com>

	Add release script; auto-generates all packages & dists.

	Add MinGW cross-compiling script, minor build script improvements.

	Use pkg-config configure macros for library checks.
		This simplifies the build configuration a lot, and makes it
		easier to build for other platforms, like Windows, without
		having to specify linked libraries manually like we were doing
		before.

	Remove the autogen.sh script, it is unnecessary.
		Scripts in contrib/ can now call autoreconf internally instead.

2022-04-03  Mohammad Matini  <mohammad.matini@outlook.com>

	Prevent crashes if a file could not be opened.
		If not found, no premission, or any other reason.  Instead, we
		now continue to the next file in the upload queue.  This was the
		case in version 1.0.0, but we had a regression in version 2.0.0.

2022-03-22  Mohammad Matini  <mohammad.matini@outlook.com>

	Add distribution archives to .gitignore.

	Added README, NEWS, AUTHORS, and COPYING files.

2022-03-21  Mohammad Matini  <mohammad.matini@outlook.com>

	Flush stdout in addition to flushing the logs on writelog.

	Add script to build workifi on GNU/Linux as dynamic executable.

	Add example config files, script to build on Windows using MinGW.
		The script builds a static version of workifi for Windows using
		MinGW.  Note that this is intended for compilation on Windows,
		and not for cross-compiling from a GNU/Linux system.

2022-03-19  Mohammad Matini  <mohammad.matini@outlook.com>

	Fix minor error in URL configuration key.

	Replace win-specific I64 format strings with standard PRIi64.

2022-02-28  Mohammad Matini  <mohammad.matini@outlook.com>

	mime.c: Include strings.h to get strncasecmp()
		strings.h and string.h are different headers. We get implicit
		declaration warnings because strncasecmp() belongs to the first.

	mime.c: Use safer comparison, statically size array.
		The mime array size doesn't need to be calculated on every