@@ -2,7 +2,12 @@
 set -e
 trap exit INT
 
-./contrib/makepkg-x86_64-linux.sh
+grep -q 'AC_INIT(\[workifi\]' configure.ac || (echo && \
+    echo "  Cannot find Workifi's configure.ac file," && \
+    echo "  Please run this script from the root folder" && \
+    echo "  of Workifi's source" && echo && exit 1)
+
+./contrib/makepkg-x86_64-pc-linux-gnu.sh
 ./contrib/makepkg-x86_64-w64-mingw32.static.sh
 
 make dist-gzip
